[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/menu/character_creator/character_creator.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/actor.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/menu/components/left_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/menu/components/right_button.tscn" type="PackedScene" id=4]

[sub_resource type="ButtonGroup" id=1]
resource_name = "selectors"

[node name="character_creator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="actor" parent="panel" instance=ExtResource( 2 )]
position = Vector2( 501.834, 207.068 )
scale = Vector2( 4, 4 )

[node name="vert_box" type="VBoxContainer" parent="panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = 360.0
margin_right = -300.0
margin_bottom = -60.0

[node name="hair_label" type="Label" parent="panel/vert_box"]
margin_right = 424.0
margin_bottom = 14.0
text = "Hair"
align = 1
valign = 1

[node name="hair_section" type="HBoxContainer" parent="panel/vert_box"]
margin_top = 18.0
margin_right = 424.0
margin_bottom = 44.0
alignment = 1

[node name="hair_left_button" parent="panel/vert_box/hair_section" instance=ExtResource( 3 )]
margin_left = 172.0
margin_right = 204.0
focus_neighbour_right = NodePath("../hair_right_button")
focus_neighbour_bottom = NodePath("../../shirt_section/shirt_left_button")
group = SubResource( 1 )

[node name="Label" type="Label" parent="panel/vert_box/hair_section"]
margin_left = 208.0
margin_top = 6.0
margin_right = 216.0
margin_bottom = 20.0
text = "1"
align = 1
valign = 1

[node name="hair_right_button" parent="panel/vert_box/hair_section" instance=ExtResource( 4 )]
margin_left = 220.0
margin_right = 252.0
focus_neighbour_left = NodePath("../hair_left_button")
focus_neighbour_bottom = NodePath("../../shirt_section/shirt_right_button")
group = SubResource( 1 )

[node name="seperator1" type="HSeparator" parent="panel/vert_box"]
margin_top = 48.0
margin_right = 424.0
margin_bottom = 52.0

[node name="shirt_label" type="Label" parent="panel/vert_box"]
margin_top = 56.0
margin_right = 424.0
margin_bottom = 70.0
text = "Shirt"
align = 1
valign = 1

[node name="shirt_section" type="HBoxContainer" parent="panel/vert_box"]
margin_top = 74.0
margin_right = 424.0
margin_bottom = 100.0
alignment = 1

[node name="shirt_left_button" parent="panel/vert_box/shirt_section" instance=ExtResource( 3 )]
margin_left = 172.0
margin_right = 204.0
focus_neighbour_top = NodePath("../../hair_section/hair_left_button")
focus_neighbour_right = NodePath("../shirt_right_button")
focus_neighbour_bottom = NodePath("../../pants_section/pants_left_button")
group = SubResource( 1 )

[node name="Label" type="Label" parent="panel/vert_box/shirt_section"]
margin_left = 208.0
margin_top = 6.0
margin_right = 216.0
margin_bottom = 20.0
text = "1"
align = 1
valign = 1

[node name="shirt_right_button" parent="panel/vert_box/shirt_section" instance=ExtResource( 4 )]
margin_left = 220.0
margin_right = 252.0
focus_neighbour_left = NodePath("../shirt_left_button")
focus_neighbour_top = NodePath("../../hair_section/hair_right_button")
focus_neighbour_bottom = NodePath("../../pants_section/pants_right_button")
group = SubResource( 1 )

[node name="seperator2" type="HSeparator" parent="panel/vert_box"]
margin_top = 104.0
margin_right = 424.0
margin_bottom = 108.0

[node name="pants_label" type="Label" parent="panel/vert_box"]
margin_top = 112.0
margin_right = 424.0
margin_bottom = 126.0
text = "Pants"
align = 1
valign = 1

[node name="pants_section" type="HBoxContainer" parent="panel/vert_box"]
margin_top = 130.0
margin_right = 424.0
margin_bottom = 156.0
alignment = 1

[node name="pants_left_button" parent="panel/vert_box/pants_section" instance=ExtResource( 3 )]
margin_left = 172.0
margin_right = 204.0
focus_neighbour_top = NodePath("../../shirt_section/shirt_left_button")
focus_neighbour_right = NodePath("../pants_right_button")
group = SubResource( 1 )

[node name="Label" type="Label" parent="panel/vert_box/pants_section"]
margin_left = 208.0
margin_top = 6.0
margin_right = 216.0
margin_bottom = 20.0
text = "1"
align = 1
valign = 1

[node name="pants_right_button" parent="panel/vert_box/pants_section" instance=ExtResource( 4 )]
margin_left = 220.0
margin_right = 252.0
focus_neighbour_left = NodePath("../pants_left_button")
focus_neighbour_top = NodePath("../../shirt_section/shirt_right_button")
group = SubResource( 1 )
[connection signal="button_up" from="panel/vert_box/hair_section/hair_left_button" to="." method="_on_hair_left_button_button_up"]
[connection signal="button_up" from="panel/vert_box/hair_section/hair_right_button" to="." method="_on_hair_right_button_button_up"]
[connection signal="button_up" from="panel/vert_box/shirt_section/shirt_left_button" to="." method="_on_shirt_left_button_button_up"]
[connection signal="button_up" from="panel/vert_box/shirt_section/shirt_right_button" to="." method="_on_shirt_right_button_button_up"]
[connection signal="button_up" from="panel/vert_box/pants_section/pants_left_button" to="." method="_on_pants_left_button_button_up"]
[connection signal="button_up" from="panel/vert_box/pants_section/pants_right_button" to="." method="_on_pants_right_button_button_up"]
